[package]
name = "bins"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = {version = "0.4.44", features = ["serde"]}
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "query"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["full", "sync"]}
