[workspace]
resolver = "2"
members = [
    "bins_workspace/bins-core",
    "bins_workspace/bins-feed",
    "bins_workspace/bins-gui",
]

[package]
name = "bins"
version = "0.1.0"
edition = "2024"

[dependencies]
bins-gui = { path = "bins_workspace/bins-gui" }
dotenvy = "0.15.0"
meth = "0.1.0"
tokio = { version = "1.50.0", features = ["full", "sync"] }
