[package]
name = "bins-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
bins-core = { path = "../bins-core" }
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
